--- a/custom.css
+++ b/custom.css
@@ -5,7 +5,21 @@
 
 }
 @import url('https://fonts.googleapis.com/css?family=Arimo:400,700&display=swap');
-
+body {
+	display: flex;
+	height: 100vh;
+	width: 100%;
+	max-height: 100vh;
+	margin: 0;
+	padding: 0;
+	background-image:
+  linear-gradient(to bottom,
+    #009688 0px,
+    #009688 15vh,
+    #dddbd1 15vh,
+    #d2dbdc 100%
+    );
+}
 .container{
   width: 1200px;
   margin: 2% auto;
