mm nah non funziona il cambio utente

--- a/custom.css
+++ b/custom.css
@@ -157,8 +157,11 @@ a{
   position: relative;
   float: left;
   padding-bottom: 70px;
+  display: none;
 }
-
+.contenitore.active{
+  display: block;
+}
 
 #messaggi{
   background-image:url("bk.png");
